Style fix on mobile

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -148,6 +148,7 @@ nav {
   background-image: url("../images/mobile/image-hero.jpg");
   background-size: cover;
   background-position: center;
+  overflow-x: hidden;
 
   @include media-breakpoint-up(md) {
     padding: 18rem 0 12rem;
@@ -168,14 +169,13 @@ nav {
       max-width: 95%;
       display: inline-block;
       padding: 1.5rem 2rem;
-      font-size: 3.125rem;
+      font-size: 2rem;
       text-transform: uppercase;
-
       color: $white;
       border: 3px solid $white;
 
       @include media-breakpoint-up(sm) {
-        font-size: 2.75rem;
+        font-size: 3.125rem;
       }
       @include media-breakpoint-up(md) {
         font-size: 3.875rem;
@@ -233,7 +233,7 @@ nav {
     }
 
     &--text {
-      padding: 0 4.5rem;
+      padding: 0;
       background-color: $white;
       text-align: center;
 
@@ -243,9 +243,9 @@ nav {
         text-align: left;
         flex: 0.8;
         min-height: 300px;
-
+        padding: 0 2rem 2rem 2rem;
         margin-left: -8%;
-        padding-bottom: 2rem;
+
         box-shadow: 4px 2px 8px -1px $text-shadow2;
       }
       h1 {
